--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,19 @@
-name: Build and Deploy to GitHub Pages
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,7 +32,8 @@ jobs:
 
       - name: Build project
         env:
-          VUE_APP_API_URL: ${{ secrets.API_URL }}
+          VUE_APP_API_URL: ${{ secrets.VUE_APP_API_URL }}
+          BE_API_KEY: ${{ secrets.BE_API_KEY }}
         run: npm run build
 
       - name: Deploy to GitHub Pages
