--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,10 +39,16 @@ jobs:
       - name: List `dist` contents for verification
         run: ls -laR dist
 
+      - name: Reinitialize Git
+        run: |
+          git init
+          git remote add origin https://github.com/1DanToken/1DanGame.git
+          git checkout -b gh-pages
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          exclude_assets: ".*"
+          force_orphan: true
           enable_jekyll: false
