--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,7 @@ jobs:
         run: |
           npm install
           npm audit fix --force
+          npm audit fix
 
       - name: Build and Deploy 
         env:
