--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "fe",
-    "version": "0.1.0",
+    "name": "1dangame",
+    "version": "1.1.0",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
