--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,6 +36,7 @@ jobs:
         env:
           VUE_APP_API_URL: ${{ secrets.VUE_APP_API_URL }}
           BE_API_KEY: ${{ secrets.BE_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.email "187533647+1DanToken@users.noreply.github.com"
           git config user.name "1DanToken"
