--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "vue-cli-service build",
         "clean": "rimraf dist && rimraf node_modules/.cache",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d dist -r https://x-access-token:${GITHUB_TOKEN}@github.com/1DanToken/1DanGame.git"
     },
     "dependencies": {
         "@vue/cli-service": "^4.5.0",
