--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "clean": "rimraf dist && rimraf node_modules/.cache",
-        "predeploy": "npm run build",
+        "predeploy": "ls -laR dist",
         "deploy": "gh-pages -d dist -r https://x-access-token:${GITHUB_TOKEN}@github.com/1DanToken/1DanGame.git"
     },
     "dependencies": {
